apps/changedetection/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: changedetection-ingress
  namespace: tools
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`changedetection.sobrinho.pt`)
      kind: Rule
      services:
        - name: changedetection-io
          port: main
  tls:
    secretName: changedetection-cert
